# investctr

./: .gitignore  CLAUDE.md  Dockerfile  README.md  railway.toml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.worker  alembic.ini  docker-compose.yml  pyproject.toml  railway-worker.toml  railway.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: accounts.py  assets.py  cash_flows.py  documents.py  fund.py  health.py  portfolio.py  positions.py  quotes.py  transactions.py
backend/app/core/: error_handlers.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  security.py  sentry.py
backend/app/integrations/: cvm_client.py  supabase.py  tesouro_direto_client.py  yfinance_client.py
backend/app/integrations/claude/: client.py
backend/app/integrations/claude/parsers/: __init__.py  base.py  statement_cayman_parser.py  statement_parser.py  trade_note_parser.py
backend/app/integrations/claude/prompts/: __init__.py  base.py  statement.py  statement_cayman.py  trade_note.py
backend/app/models/: __init__.py  account.py  asset.py  base.py  cash_flow.py  document.py  exchange_rate.py  fixed_income.py  fund_share.py  investment_fund.py  portfolio_snapshot.py  position.py  quote.py  realized_trade.py  transaction.py
backend/app/schemas/: __init__.py  account.py  asset.py  base.py  cash_flow.py  document.py  enums.py  fixed_income.py  fund.py  investment_fund.py  position.py  quote.py  transaction.py
backend/app/services/: __init__.py  cache_service.py  exchange_rate_service.py  nav_service.py  parsing_service.py  pnl_service.py  position_reconciliation_service.py  position_service.py  quote_service.py  validation.py
backend/app/workers/: celery_app.py  schedules.py
backend/app/workers/tasks/: __init__.py  nav_tasks.py  parse_document.py  quote_tasks.py  snapshot_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 001_add_missing_enum_values.py  002_add_parsing_stage_column.py  003_add_fixed_income_and_expand_cash_flows.py  004_add_investment_fund_positions.py  005_expand_portfolio_snapshot.py  006_add_currency_to_portfolio_snapshot.py  007_add_exchange_rates_table.py  008_add_realized_trades_table.py  009_add_position_source.py
backend/scripts/: backfill_cash_flows.py  backfill_nav.py  backfill_portfolio_snapshots.py  backfill_quotes.py  batch_import_direct.py  batch_import_statements.py  consolidate_portfolio.py  create_accounts.py  delete_cayman_documents.py  fetch_ptax_rates.py  migrate_positions_from_statements.py  recalculate_positions.py  search_fund_cnpj.py
backend/tests/: conftest.py
backend/tests/integration/: test_accounts.py  test_documents.py  test_positions.py  test_transactions.py
docs/: ARCHITECTURE_Investment_Platform.md  MVP_Investment_Platform.md  POSITION_PNL_CALCULATION.md  PRD_Investment_Platform.md  ROADMAP_Investment_Platform.md  WIP_RETRY_LOOP.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js
frontend/public/: manifest.json  site.webmanifest
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: error.tsx  layout.tsx
frontend/src/components/: error-boundary.tsx
frontend/src/components/dashboard/: GlassHeroCard.tsx  allocation-chart.tsx  exposure-card.tsx  index.ts  nav-evolution-chart.tsx  portfolio-charts.tsx
frontend/src/components/documents/: CashMovementsTable.tsx  DocumentStatusBadge.tsx  DocumentSummary.tsx  FixedIncomeTable.tsx  InvestmentFundsTable.tsx  ParsePreview.tsx  StockLendingTable.tsx  UploadZone.tsx  index.ts
frontend/src/components/layout/: Header.tsx  MobileNav.tsx  Sidebar.tsx
frontend/src/components/shared/: CommandPalette.tsx  EmptyState.tsx  error-boundary.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  command.tsx  data-card.tsx  dialog.tsx  empty-state.tsx  form.tsx  index.ts  input.tsx  label.tsx  select.tsx  sheet.tsx  skeleton.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  use-toast.ts
frontend/src/hooks/: index.ts  use-accounts.ts  use-cash-flows.ts  use-documents.ts  use-fund.ts  use-portfolio.ts  use-positions.ts  use-quotes.ts  use-transactions.ts  useAppToast.ts
frontend/src/lib/: format.ts  utils.ts
frontend/src/lib/api/: accounts.ts  cash-flows.ts  client.ts  documents.ts  fund.ts  index.ts  portfolio.ts  positions.ts  quotes.ts  transactions.ts  (+1 more)
worker/: Dockerfile
(+9 files in other folders)
