[project]
name = "investctr-backend"
version = "0.1.0"
description = "Investment portfolio management platform API"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bigode" }]

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",

    # Authentication
    "pyjwt[crypto]>=2.8.0",
    "cryptography>=42.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Task queue
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",

    # Market data
    "yfinance>=0.2.36",

    # AI/LLM
    "anthropic>=0.18.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-multipart>=0.0.9",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # comparison to True/False (needed for SQLAlchemy filters)
    "E402",  # module level import not at top (needed for some patterns)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from (stylistic)
    "B905",  # zip without strict (not needed for our use cases)
    "C401",  # unnecessary generator (stylistic preference)
]

[tool.ruff.lint.per-file-ignores]
# SQLAlchemy models use string forward references
"app/models/*.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
